--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,258 @@
-.App {
-  text-align: center;
+body{
+  margin: 0;
+  padding: 0;
+}
+*{
+  box-sizing: border-box;
+  font-family: 'Poppins' , sans-serif;
+}
+.limitar-secao{
+  max-width: 1024px;
+  margin: 0 auto;
+}
+h2,h3{
+  text-transform: uppercase;
+  font-size: 36px;
+  margin: 0;
+}
+header{
+  padding: 10px 15px;
+}
+header div{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: space-evenly;
+}
+header div img{
+  width: 150px;
+}
+header div a{
+  font-size: 18px;
+  color: #000;
+  text-decoration: none;
+  padding: 5px;
+  margin: 5px;
+}
+main {
+  background-image: url('/src/assets/capa.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 80vh;
+}
+main div{
+  width: 100%;
+  padding: 20px;
+  align-items: center;
+  display: block;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+main div h1,h2,h3{
+  max-width: 500px;
+  font-family: 'Anybody' , cursive;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+main div p{
+  font-size: 36px;
+  color: rgb(196, 196, 196);
+}
+main div h2{
+  font-size: 60px;
+  color: #fff;
+  margin: 0px;
+  letter-spacing: 5px;
+  line-height: 70px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+section #produtos{
+  width: 100%;
+  padding: 100px 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+section #fotos{
+  margin: 50px 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+section #produtos h2{
+  color: #000;
+  font-size: 2em;
+}
+section #produtos p{
+  color: black;
+  font-size: 1em;
+}
+
+section .cards{
+  background-color: #f6f6f6;
+  width:calc(50% - 15px);
+  padding: 20px 10px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Centralizar verticalmente */
+  align-items: center; /* Centralizar horizontalmente */
+}
+
+section .cards img{
+  width: 80%;
+  max-height: 150px;
+  margin: 30px 0;
+}
+
+section .cards h3{
+  margin: 0;
+  font-size: 32px;
+}
+
+section .cards p{
+  color: black;
+  margin: 0;
+  font-weight: bold;
+  font-size: 22px;
+}
+
+section #produtos ul{
+  padding: 0px 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+section #produtos ul li{
+  text-align: left;
+  margin: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+section #produtos .paragrafo-lista{
+  display: flex;
+  flex-direction: column;
+}
+
+section #produtos #primeiro-paragrafo{
+  margin-bottom: 5px;
+}
+footer p{
+  display: flex;
+  justify-content: space-around;
+}
+
+sobre{
+  background-color: #f8f7ff;
+  text-align: center;
+}
+sobre #sobre #subtitulo-e-paragrafo{
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  width: 1100px;
+}
+
+sobre #sobre p{
+  line-height: 32px;
+  color:rgb(40, 40, 40);
+  font-size: 16px;
+  max-width: 100%;
+}
+
+sobre #sobre h2{
+  color: #000;
+  max-width: 100%;
+}
+
+sobre #sobre .cards-2{
+  display: flex;
+  max-width: 1100px;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+sobre #sobre .paragrafo{
+  max-height: 300px;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+sobre #sobre .paragrafo img{
+  max-height: 300;
+  width: 100%;
+}
+
+nav{
+  width: 100%;
+  text-align: center;
+  padding: 100px 20px;
+  background-color: #05031b;
+  color: #fff;
+}
+
+nav #contato p, h3, h2{
+  color: #fff;
+}
+
+nav #contato #alinhamento{
+  display:flex;
+}
+
+nav #contato .id-redes-sociais{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 15px;
+  width: 50%;
+}
+
+nav #contato .id-redes-sociais div{
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin-top: 5px;
+}
+
+nav #contato .id-redes-sociais div img{
+  width: 18px;
+}
+
+nav #contato .id-redes-sociais div span{
+  font-size: 14px;
+}
+
+nav #contato .id-redes-sociais h3{
+  font-size: 20px;
+  margin-bottom: 15px;
+
+}
+
+section #produtos #fotos .cards h3{
+  color: #000;
+}
+
+nav #contato #titulo-e-paragrafo{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+nav #contato #titulo-e-paragrafo h2{
+  font-size:48px ;
+}
+
+nav #contato #titulo-e-paragrafo p{
+  font-size: 14px;
+}
+
+footer{
+  color: #adadad;
+  background-color: #030303;
+  padding: 20px;
 }
